[gd_scene load_steps=22 format=3 uid="uid://ee2pm4fw2xjc"]

[ext_resource type="Script" path="res://scenes/ship/ship.gd" id="1_u2t6m"]
[ext_resource type="Texture2D" uid="uid://dycf6wwpjd5kx" path="res://assets/ships/playerShip1_orange.png" id="2_38lnr"]
[ext_resource type="Texture2D" uid="uid://0fv6i5t0bmhj" path="res://assets/effects/fire14.png" id="4_3o72o"]
[ext_resource type="Texture2D" uid="uid://bp6yywc47hfmc" path="res://assets/effects/fire15.png" id="5_mf0sn"]
[ext_resource type="Texture2D" uid="uid://bu4fvogdss8tw" path="res://assets/ships/Explosion.png" id="5_vfavq"]
[ext_resource type="AudioStream" uid="uid://dvbxlvtdqltwl" path="res://assets/sounds/159012__primeval_polypod__distant-rumble.wav" id="6_k445o"]
[ext_resource type="AudioStream" uid="uid://vb4xpnpnsg8m" path="res://assets/sounds/explosion.ogg" id="7_gfd7o"]

[sub_resource type="SpriteFrames" id="SpriteFrames_l4n8m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_3o72o")
}, {
"duration": 1.0,
"texture": ExtResource("5_mf0sn")
}, {
"duration": 1.0,
"texture": ExtResource("4_3o72o")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_qlul5"]
atlas = ExtResource("5_vfavq")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qwue"]
atlas = ExtResource("5_vfavq")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o2dm"]
atlas = ExtResource("5_vfavq")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4coy"]
atlas = ExtResource("5_vfavq")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8inf"]
atlas = ExtResource("5_vfavq")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ildve"]
atlas = ExtResource("5_vfavq")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7elik"]
atlas = ExtResource("5_vfavq")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5eey0"]
atlas = ExtResource("5_vfavq")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_78dif"]
atlas = ExtResource("5_vfavq")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vpvn"]
atlas = ExtResource("5_vfavq")
region = Rect2(864, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_j06qj"]
atlas = ExtResource("5_vfavq")
region = Rect2(960, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt78k"]
atlas = ExtResource("5_vfavq")
region = Rect2(1056, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_gvuuv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlul5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qwue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o2dm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4coy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8inf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ildve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7elik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5eey0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78dif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vpvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j06qj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt78k")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Ship" type="CharacterBody2D" groups=["ship"]]
scale = Vector2(0.6, 0.6)
script = ExtResource("1_u2t6m")

[node name="Image" type="Sprite2D" parent="."]
texture = ExtResource("2_38lnr")

[node name="thrusterForward" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 48.3333)
sprite_frames = SubResource("SpriteFrames_l4n8m")
autoplay = "default"
frame_progress = 0.781914

[node name="thrusterBackward" type="AnimatedSprite2D" parent="."]
position = Vector2(-7.95808e-13, -46.6667)
rotation = -3.14159
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_l4n8m")
autoplay = "default"
frame_progress = 0.0197355

[node name="thrusterRight" type="AnimatedSprite2D" parent="."]
position = Vector2(56.6667, 8.33333)
rotation = -1.5708
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_l4n8m")
autoplay = "default"
frame_progress = 0.0197355

[node name="thrusterLeft" type="AnimatedSprite2D" parent="."]
position = Vector2(-56.6667, 8.33333)
rotation = 1.5708
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_l4n8m")
autoplay = "default"
frame_progress = 0.0197355

[node name="destroy" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_gvuuv")
frame = 1
frame_progress = 0.382178
speed_scale = 1.4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(7.5, -33.1, 7.5, -28.9, 11.2, -10.5, 12.1, -10.5, 33.1, 2.5, 35.2, 2.5, 44.5, 1.2, 44.5, 4.1, 47, 15.5, 44.2, 15.5, 37.2, 21.5, 32.9, 21.5, 12.5, 26.1, 5.5, 35.5, -5.6, 35.5, -11.6, 26.5, -13.7, 26.5, -43.5, 19.1, -43.5, 17.3, -46.5, 14.3, -46.5, 4.7, -43.3, 1.5, -39.4, 1.5, -34.3, 2.2, -10.5, -10.8, -10.5, -12.7, -5.5, -32.5, -5.5, -36)

[node name="ThrusterAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_k445o")
volume_db = -15.0
autoplay = true

[node name="BoomPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_gfd7o")
